--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         max-width: 600px;
         margin-left: auto;
         margin-right: auto;
+        min-height: 300px;
+      }
+      @media (max-width: 640px) {
+        .chart-container {
+          max-width: 100%;
+          min-height: 250px;
+        }
       }
       .nav-link {
         transition: all 0.3s;
@@ -219,7 +226,9 @@
           <div class="md:hidden">
             <button
               id="mobile-menu-button"
-              class="text-slate-800 focus:outline-none"
+              class="text-slate-800 focus:outline-none p-2"
+              aria-label="Toggle mobile menu"
+              aria-expanded="false"
             >
               <svg
                 class="w-6 h-6"
@@ -240,21 +249,21 @@
         </nav>
         <div
           id="mobile-menu"
-          class="hidden md:hidden py-4"
+          class="hidden md:hidden py-4 bg-white border-t border-slate-200"
         >
           <a
             href="#deep-dive"
-            class="block py-2 text-center nav-link"
+            class="block py-3 px-4 text-center nav-link hover:bg-slate-50 transition-colors"
             >วิเคราะห์ไอเดียหลัก</a
           >
           <a
             href="#watchlist"
-            class="block py-2 text-center nav-link"
+            class="block py-3 px-4 text-center nav-link hover:bg-slate-50 transition-colors"
             >Unicorn Watchlist</a
           >
           <a
             href="#playbook"
-            class="block py-2 text-center nav-link"
+            class="block py-3 px-4 text-center nav-link hover:bg-slate-50 transition-colors"
             >Founder's Playbook</a
           >
         </div>
@@ -265,27 +274,27 @@
       <!-- Section 1: Hero -->
       <section
         id="home"
-        class="py-16 md:py-24 bg-white"
+        class="py-12 sm:py-16 md:py-24 bg-white"
       >
         <div
-          class="container mx-auto text-center px-4"
+          class="container mx-auto text-center px-4 sm:px-6"
         >
           <h1
-            class="text-4xl md:text-6xl font-bold mb-4 text-slate-800"
+            class="text-3xl sm:text-4xl md:text-6xl font-bold mb-4 text-slate-800 leading-tight"
           >
             Project Unicorn Thailand
           </h1>
           <p
-            class="text-lg md:text-2xl text-slate-600 max-w-3xl mx-auto"
+            class="text-base sm:text-lg md:text-2xl text-slate-600 max-w-3xl mx-auto leading-relaxed px-2"
           >
             แผนแม่บทเชิงกลยุทธ์สู่การครองตลาด
             Niche
             และสร้างยูนิคอร์นสัญชาติไทยตัวต่อไป
           </p>
-          <div class="mt-8">
+          <div class="mt-6 sm:mt-8">
             <a
               href="#deep-dive"
-              class="btn-primary font-semibold py-3 px-8 rounded-full shadow-lg"
+              class="btn-primary font-semibold py-3 px-6 sm:px-8 rounded-full shadow-lg inline-block"
             >
               เริ่มต้นสำรวจโอกาส
             </a>
@@ -296,21 +305,21 @@
       <!-- Section 2: Deep Dive on Initial Ideas -->
       <section
         id="deep-dive"
-        class="py-12 md:py-20"
+        class="py-10 sm:py-12 md:py-20"
       >
         <div
-          class="container mx-auto px-4"
+          class="container mx-auto px-4 sm:px-6"
         >
           <div
-            class="text-center mb-12"
+            class="text-center mb-8 sm:mb-12"
           >
             <h2
-              class="text-3xl md:text-4xl font-bold mb-2 text-slate-800"
+              class="text-2xl sm:text-3xl md:text-4xl font-bold mb-2 text-slate-800"
             >
               วิเคราะห์ไอเดียเริ่มต้นเชิงลึก
             </h2>
             <p
-              class="text-base md:text-lg text-slate-600 max-w-2xl mx-auto"
+              class="text-sm sm:text-base md:text-lg text-slate-600 max-w-2xl mx-auto px-2"
             >
               เลือกไอเดียเพื่อดูการวิเคราะห์โดยละเอียด
               ทั้งภาพรวมตลาด, การแข่งขัน
@@ -322,14 +331,14 @@
 
           <div
             id="idea-selector"
-            class="flex flex-wrap justify-center gap-2 md:gap-4 mb-8"
+            class="flex flex-wrap justify-center gap-2 sm:gap-3 md:gap-4 mb-6 sm:mb-8 px-2"
           >
             <!-- Buttons will be generated here -->
           </div>
 
           <div
             id="idea-content"
-            class="bg-white p-6 md:p-8 rounded-2xl shadow-lg transition-all duration-500 min-h-[500px]"
+            class="bg-white p-4 sm:p-6 md:p-8 rounded-2xl shadow-lg transition-all duration-500 min-h-[400px] sm:min-h-[500px]"
           >
             <!-- Content will be injected here -->
           </div>
@@ -339,27 +348,27 @@
       <!-- Section 3: Unicorn Watchlist -->
       <section
         id="watchlist"
-        class="py-12 md:py-20 bg-slate-50"
+        class="py-10 sm:py-12 md:py-20 bg-slate-50"
       >
         <div
-          class="container mx-auto px-4"
+          class="container mx-auto px-4 sm:px-6"
         >
           <div
-            class="text-center mb-12"
+            class="text-center mb-8 sm:mb-12"
           >
             <h2
-              class="text-3xl md:text-4xl font-bold mb-2 text-slate-800"
+              class="text-2xl sm:text-3xl md:text-4xl font-bold mb-2 text-slate-800"
             >
               The Unicorn Watchlist
             </h2>
             <p
-              class="text-base md:text-lg text-slate-600 max-w-2xl mx-auto"
+              class="text-sm sm:text-base md:text-lg text-slate-600 max-w-2xl mx-auto px-2"
             >
               20
               ไอเดียธุรกิจที่มีศักยภาพสูงสำหรับตลาดไทย
               กรองตามหมวดหมู่หรือจัดลำดับตามคะแนนเพื่อหาโอกาสที่น่าสนใจที่สุด
               <strong
-                class="text-emerald-600 block md:inline mt-1"
+                class="text-emerald-600 block sm:block md:inline mt-1"
                 >คลิกที่แถว/การ์ดเพื่อดูรายละเอียด</strong
               >
             </p>
@@ -367,7 +376,7 @@
 
           <div
             id="watchlist-filters"
-            class="flex flex-wrap justify-center gap-2 md:gap-3 mb-8"
+            class="flex flex-wrap justify-center gap-2 sm:gap-2 md:gap-3 mb-6 sm:mb-8 px-2"
           >
             <!-- Filter buttons will be generated here -->
           </div>
@@ -445,21 +454,21 @@
       <!-- Section 4: Founder's Playbook -->
       <section
         id="playbook"
-        class="py-12 md:py-20"
+        class="py-10 sm:py-12 md:py-20"
       >
         <div
-          class="container mx-auto px-4"
+          class="container mx-auto px-4 sm:px-6"
         >
           <div
-            class="text-center mb-12"
+            class="text-center mb-8 sm:mb-12"
           >
             <h2
-              class="text-3xl md:text-4xl font-bold mb-2 text-slate-800"
+              class="text-2xl sm:text-3xl md:text-4xl font-bold mb-2 text-slate-800"
             >
               The Founder's Playbook
             </h2>
             <p
-              class="text-base md:text-lg text-slate-600 max-w-2xl mx-auto"
+              class="text-sm sm:text-base md:text-lg text-slate-600 max-w-2xl mx-auto px-2"
             >
               กลยุทธ์และแนวทางปฏิบัติ
               จากแผนแม่บทสู่ความเป็นจริง
@@ -468,7 +477,7 @@
 
           <div
             id="accordion-container"
-            class="max-w-3xl mx-auto space-y-4"
+            class="max-w-3xl mx-auto space-y-3 sm:space-y-4"
           >
             <!-- Accordion items will be generated here -->
           </div>
@@ -477,12 +486,12 @@
     </main>
 
     <footer
-      class="bg-slate-800 text-white py-8"
+      class="bg-slate-800 text-white py-6 sm:py-8"
     >
       <div
-        class="container mx-auto text-center px-4"
+        class="container mx-auto text-center px-4 sm:px-6"
       >
-        <p>
+        <p class="text-sm sm:text-base">
           &copy; 2025 Project Unicorn
           Thailand.
           สร้างสรรค์เพื่อขับเคลื่อนระบบนิเวศสตาร์ทอัพไทย
@@ -493,21 +502,22 @@
     <!-- Watchlist Modal -->
     <div
       id="watchlist-modal"
-      class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50 p-4 modal-enter"
+      class="fixed inset-0 bg-black bg-opacity-60 hidden items-center justify-center z-50 p-2 sm:p-4 modal-enter"
     >
       <div
         id="modal-content-wrapper"
-        class="bg-white rounded-2xl shadow-xl max-w-2xl w-full relative max-h-[90vh] overflow-y-auto modal-content-enter"
+        class="bg-white rounded-xl sm:rounded-2xl shadow-xl max-w-2xl w-full relative max-h-[95vh] sm:max-h-[90vh] overflow-y-auto modal-content-enter"
       >
         <button
           id="modal-close-btn"
-          class="sticky top-4 right-4 float-right text-3xl font-bold text-slate-400 hover:text-slate-700 z-10 bg-white/50 backdrop-blur-sm rounded-full w-10 h-10 flex items-center justify-center"
+          class="sticky top-2 sm:top-4 right-2 sm:right-4 float-right text-2xl sm:text-3xl font-bold text-slate-400 hover:text-slate-700 z-10 bg-white/50 backdrop-blur-sm rounded-full w-8 h-8 sm:w-10 sm:h-10 flex items-center justify-center"
+          aria-label="Close modal"
         >
           &times;
         </button>
         <div
           id="modal-content"
-          class="p-6 md:p-8"
+          class="p-4 sm:p-6 md:p-8"
         >
           <!-- Detailed content will be injected here -->
         </div>
@@ -1370,24 +1380,24 @@
               deepDiveData[ideaKey];
             ideaContent.innerHTML = `
                 <div class="animate-fade-in">
-                    <h3 class="text-2xl md:text-3xl font-bold mb-4 text-slate-800">${
+                    <h3 class="text-xl sm:text-2xl md:text-3xl font-bold mb-3 sm:mb-4 text-slate-800 leading-tight">${
                       idea.title
                     }</h3>
-                    <p class="text-slate-600 mb-6">${
+                    <p class="text-sm sm:text-base text-slate-600 mb-4 sm:mb-6 leading-relaxed">${
                       idea.overview
                     }</p>
                     
-                    <div class="grid md:grid-cols-2 gap-8 mb-8">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 sm:gap-8 mb-6 sm:mb-8">
                         <div>
-                            <h4 class="text-xl font-semibold mb-3">ฟีเจอร์หลัก</h4>
-                            <ul class="space-y-3">
+                            <h4 class="text-lg sm:text-xl font-semibold mb-3">ฟีเจอร์หลัก</h4>
+                            <ul class="space-y-2 sm:space-y-3">
                                 ${idea.features
                                   .map(
                                     (
                                       f
                                     ) => `
-                                    <li class="flex items-start">
-                                        <span class="text-green-500 mr-2 mt-1">&#10003;</span>
+                                    <li class="flex items-start text-sm sm:text-base">
+                                        <span class="text-green-500 mr-2 mt-1 flex-shrink-0">&#10003;</span>
                                         <div><strong>${f.title}:</strong> ${f.detail}</div>
                                     </li>
                                 `
@@ -1397,30 +1407,30 @@
                                   )}
                             </ul>
                         </div>
-                        <div class="chart-container h-80 md:h-96">
+                        <div class="chart-container h-64 sm:h-80 md:h-96">
                             <canvas id="magicQuadrantChart"></canvas>
                         </div>
                     </div>
 
-                    <h4 class="text-xl font-semibold mb-3">SWOT Analysis</h4>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
-                        <div class="bg-green-50 border border-green-200 p-4 rounded-lg"><strong>จุดแข็ง:</strong> ${
+                    <h4 class="text-lg sm:text-xl font-semibold mb-3">SWOT Analysis</h4>
+                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-4 mb-4 sm:mb-6">
+                        <div class="bg-green-50 border border-green-200 p-3 sm:p-4 rounded-lg text-sm sm:text-base"><strong>จุดแข็ง:</strong> ${
                           idea.swot.s
                         }</div>
-                        <div class="bg-red-50 border border-red-200 p-4 rounded-lg"><strong>จุดอ่อน:</strong> ${
+                        <div class="bg-red-50 border border-red-200 p-3 sm:p-4 rounded-lg text-sm sm:text-base"><strong>จุดอ่อน:</strong> ${
                           idea.swot.w
                         }</div>
-                        <div class="bg-blue-50 border border-blue-200 p-4 rounded-lg"><strong>โอกาส:</strong> ${
+                        <div class="bg-blue-50 border border-blue-200 p-3 sm:p-4 rounded-lg text-sm sm:text-base"><strong>โอกาส:</strong> ${
                           idea.swot.o
                         }</div>
-                        <div class="bg-yellow-50 border border-yellow-200 p-4 rounded-lg"><strong>อุปสรรค:</strong> ${
+                        <div class="bg-yellow-50 border border-yellow-200 p-3 sm:p-4 rounded-lg text-sm sm:text-base"><strong>อุปสรรค:</strong> ${
                           idea.swot.t
                         }</div>
                     </div>
                     
-                    <div class="bg-slate-100 p-4 rounded-lg">
-                        <h4 class="text-xl font-semibold mb-2">คำตัดสินของผู้ก่อตั้ง</h4>
-                        <p class="text-slate-700">${
+                    <div class="bg-slate-100 p-3 sm:p-4 rounded-lg">
+                        <h4 class="text-lg sm:text-xl font-semibold mb-2">คำตัดสินของผู้ก่อตั้ง</h4>
+                        <p class="text-slate-700 text-sm sm:text-base leading-relaxed">${
                           idea.verdict
                         }</p>
                     </div>
@@ -1692,24 +1702,24 @@
             if (!idea) return;
 
             modalContent.innerHTML = `
-                <span class="inline-block bg-emerald-100 text-emerald-800 text-sm font-medium mb-4 px-3 py-1 rounded-full">${idea.group}</span>
-                <h3 class="text-2xl md:text-3xl font-bold mb-4 text-slate-800">${idea.idea}</h3>
-                <div class="space-y-5 text-slate-700 leading-relaxed">
+                <span class="inline-block bg-emerald-100 text-emerald-800 text-xs sm:text-sm font-medium mb-3 sm:mb-4 px-2 sm:px-3 py-1 rounded-full">${idea.group}</span>
+                <h3 class="text-xl sm:text-2xl md:text-3xl font-bold mb-3 sm:mb-4 text-slate-800 leading-tight">${idea.idea}</h3>
+                <div class="space-y-4 sm:space-y-5 text-slate-700 leading-relaxed text-sm sm:text-base">
                     <div>
-                        <h4 class="font-semibold text-lg mb-1 text-slate-800">ปัญหาที่แก้ไข (Problem)</h4>
-                        <p>${idea.problem_desc}</p>
+                        <h4 class="font-semibold text-base sm:text-lg mb-1 sm:mb-2 text-slate-800">ปัญหาที่แก้ไข (Problem)</h4>
+                        <p class="leading-relaxed">${idea.problem_desc}</p>
                     </div>
                     <div>
-                        <h4 class="font-semibold text-lg mb-1 text-slate-800">แนวทางแก้ไข (Solution)</h4>
-                        <p>${idea.solution}</p>
+                        <h4 class="font-semibold text-base sm:text-lg mb-1 sm:mb-2 text-slate-800">แนวทางแก้ไข (Solution)</h4>
+                        <p class="leading-relaxed">${idea.solution}</p>
                     </div>
                     <div>
-                        <h4 class="font-semibold text-lg mb-1 text-slate-800">ข้อมูลเชิงลึกและตัวอย่าง</h4>
-                        <p>${idea.insight}</p>
+                        <h4 class="font-semibold text-base sm:text-lg mb-1 sm:mb-2 text-slate-800">ข้อมูลเชิงลึกและตัวอย่าง</h4>
+                        <p class="leading-relaxed">${idea.insight}</p>
                     </div>
                     <div>
-                        <h4 class="font-semibold text-lg mb-1 text-slate-800">โมเดลการสร้างรายได้ (Monetization)</h4>
-                        <p>${idea.monetization}</p>
+                        <h4 class="font-semibold text-base sm:text-lg mb-1 sm:mb-2 text-slate-800">โมเดลการสร้างรายได้ (Monetization)</h4>
+                        <p class="leading-relaxed">${idea.monetization}</p>
                     </div>
                 </div>
             `;
@@ -1884,9 +1894,35 @@
           mobileMenuButton.addEventListener(
             "click",
             () => {
+              const isHidden =
+                mobileMenu.classList.contains(
+                  "hidden"
+                );
               mobileMenu.classList.toggle(
                 "hidden"
               );
+              mobileMenuButton.setAttribute(
+                "aria-expanded",
+                isHidden
+              );
+            }
+          );
+
+          // Close mobile menu when clicking on menu links
+          mobileMenu.addEventListener(
+            "click",
+            (e) => {
+              if (
+                e.target.tagName === "A"
+              ) {
+                mobileMenu.classList.add(
+                  "hidden"
+                );
+                mobileMenuButton.setAttribute(
+                  "aria-expanded",
+                  "false"
+                );
+              }
             }
           );
 
